// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin/BadgesSection with badges renders 1`] = `
<body>
  <div>
    <div
      class="badge-section"
    >
      <h4>
        
      </h4>
       
      <div
        class="badge-container"
      >
        <button
          class="badge"
        >
          <img
            alt="description1"
            src="/api/icon1"
          />
        </button>
        <button
          class="badge inactive"
        >
          <img
            alt="description2"
            src="/api/icon2"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Admin/BadgesSection without badges renders 1`] = `
<body>
  <div>
    <div
      class="badge-section"
    >
      <h4>
        
      </h4>
       
      <div>
        
    admin.badges.noBadges
  
      </div>
    </div>
  </div>
</body>
`;
